--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__link" href="https://www.instagram.com/adrian.santos002"> 
-                    <img src="./icon-instagram.svg" alt="icon do instagram" class="apresentacao__links__link__icon">
+                    <img src="./assets/icon-instagram.svg" alt="icon do instagram" class="apresentacao__links__link__icon">
                      Instagram
                 </a>
                 <a class="apresentacao__links__link" href="https://github.com/Adrianhenrrique"> 
-                    <img src="./icon-github.svg" alt="icon do github" class="apresentacao__links__link__icon">
+                    <img src="./assets/icon-github.svg" alt="icon do github" class="apresentacao__links__link__icon">
                     github
                 </a>
             </div>
         </section>
-        <img src="imagem.png" alt="Foto da Joana Santos programando">
+        <img src="./imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="rodape">
         <p class="rodape__paragrafo">
