--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </a>
             </div>
         </section>
-        <img src="./imagem.png" alt="Foto da Joana Santos programando">
+        <img src="./Imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="rodape">
         <p class="rodape__paragrafo">
